k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: musify-platform-service
  labels:
    app: musify-platform-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: musify-platform-app
